src/objects/Customer_Project__c.object
<CustomObject>
    <description>CAS: Customer Project</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>This Field is created to populate with the Opportunity&apos;s Account Name</description>
        <formula>Opportunity__r.Account_Name__c</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Closed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of tasks with status as &apos;Completed&apos; and status flag as green.</description>
        <inlineHelpText>The number of tasks with status as &apos;Completed&apos; and status flag as green.</inlineHelpText>
        <label>Actions Closed On Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there are tasks in Task which are not completed (no Completed Date), then Activity is true; otherwise false.</description>
        <inlineHelpText>If there are tasks in Task which are not completed (no Completed Date), then Activity is true; otherwise false.</inlineHelpText>
        <label>Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL__c</fullName>
        <formula>Opportunity__r.BL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>Opportunity__r.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Diagrams_Schematics__c</fullName>
        <inlineHelpText>If checked, please upload the file(s) by clicking &quot;Attach File&quot; button in &quot;Google Docs, Notes, &amp; Attachments&quot;.</inlineHelpText>
        <label>Block Diagrams/Schematics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not  Applicable</fullName>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBG__c</fullName>
        <description>This field is created to populate with the Opportunity&apos;s account CBG</description>
        <formula>Opportunity__r.Account.CMD_Industry_Segment__c</formula>
        <label>CBG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checklist Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CollabNet_Location__c</fullName>
        <label>CollabNet/Others Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field is created to Populate with the opportunity&apos;s Country Account</description>
        <formula>TEXT( Opportunity__r.Account.Country__c )</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Name__c</fullName>
        <label>Customer Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>External Id for mass upload</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <formula>Opportunity__r.MAG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>The sales person responsible for the customer.</description>
        <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is created to lookup to Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Projects</relationshipLabel>
        <relationshipName>CAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Claim_Value_USD__c</fullName>
        <formula>Opportunity__r.Claim_Value_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Claim Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Selection</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status_Flag__c</fullName>
        <formula>CASE (TEXT(Project_Status__c), 
&quot;Green&quot;, IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;), 
&quot;Yellow&quot;, IMAGE (&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;), 
&quot;Red&quot;, IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), 
&quot;&quot;)</formula>
        <label>Project Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#33FF33</color>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFCC66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field is created to populate with the Opportunity&apos;s Account Region</description>
        <formula>TEXT(Opportunity__r.Account.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Document__c</fullName>
        <label>SharePoint Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <description>The reason is required to explain why a project status is either yellow or red.</description>
        <inlineHelpText>The reason is required when a project status is either yellow or red.</inlineHelpText>
        <label>Status Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Actions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of tasks in the Task.</description>
        <label>Total Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trust_provisioning__c</fullName>
        <label>Trust Provisioning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Project</label>
    <listViews>
        <fullName>All_Customer_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BU__c</columns>
        <columns>CBG__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Phase__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Status_Flag__c</columns>
        <columns>Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Customer Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Customer_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BU__c</columns>
        <columns>CBG__c</columns>
        <columns>Project_Phase__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Status_Flag__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Customer Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>Give_access_to_users_on_Child__c</fullName>
        <label>Give access to users on Child</label>
    </sharingReasons>
    <validationRules>
        <fullName>Status_Reason_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Status_Reason__c) &amp;&amp;
OR(ISPICKVAL(Project_Status__c , &apos;Red&apos;), ISPICKVAL( Project_Status__c , &apos;Yellow&apos;))</errorConditionFormula>
        <errorDisplayField>Status_Reason__c</errorDisplayField>
        <errorMessage>Status Reason is mandatory if Project Status is either &apos;Yellow&apos; or &apos;Red&apos;.</errorMessage>
    </validationRules>
</CustomObject>